[package]
name = "procout"
version = "0.1.11"
authors = ["Plastic Arts Show <plastic.arts.show@gmail.com>"]
edition = "2018"
description = "Output a proc macro's TokenStream to a file."
keywords = ["dev", "proc", "macro", "print", "debug"]
categories = ["development-tools::debugging", "development-tools::procedural-macro-helpers", "development-tools::testing", ]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.0"}
Inflector = {version="0.11.4", default-features=false}
proc-macro2 = {version = "1.0.24"}
quote = {version="1.0.9"}
syn = {version="1.0.60", features=["full", "parsing"]}

[features]
default = ["formatted", "notification"]
procout = ["formatted"]
procout_messy = []
formatted = []
notification = []
